--- a/templates/estudiante/diplomados.html
+++ b/templates/estudiante/diplomados.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diplomados - tech-script</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../../static/CSS/diplomados.css">
-    <link rel="icon" type="image/png" href="../../static/img/logof.png">
+    <link rel="stylesheet" href="../../static/CSS/estudiante/diplomados.css">
+    <link rel="icon" type="image/png" href="../../static/img/logof.png"/>
 </head>
 <body>
     <div class="layout">
@@ -19,12 +19,13 @@
                 </div>
                 <button id="toggleSidebar" class="toggle-btn">☰</button>
             </div>
-           <nav>
-  <a href="{{ url_for('student') }}" class="nav-item active" id="Inicio">
+
+ <nav>
+  <a href="{{ url_for('student') }}" class="nav-item " id="Inicio">
     <i class="fas fa-chart-line icon"></i>
     <span class="text">Inicio</span>
   </a>
-  <a href="{{ url_for('diplomados') }}" class="nav-item" id="diplomados">
+  <a href="{{ url_for('diplomados') }}" class="nav-item active" id="diplomados">
     <i class="fas fa-book icon"></i>
     <span class="text">Diplomados</span>
   </a>
@@ -36,15 +37,12 @@
     <i class="fas fa-credit-card icon"></i>
     <span class="text">Pagos</span>
   </a>
-  <a href="{{ url_for('mensajes') }}" class="nav-item" id="mensajes">
-    <i class="fas fa-envelope icon"></i>
-    <span class="text">Mensajes</span>
-  </a>
   <a href="{{ url_for('certificados') }}" class="nav-item" id="certificados">
     <i class="fas fa-certificate icon"></i>
     <span class="text">Certificados</span>
   </a>
 </nav>
+
             <div class="sidebar-footer">
                 <div class="nav-item" id="configuracion"><i class="fas fa-cog icon"></i><span class="text">Configuración</span></div>
                 <div class="nav-item" id="mi-cuenta"><i class="fas fa-user icon"></i><span class="text">Mi cuenta</span></div>
@@ -108,6 +106,6 @@
     </div>
 
     <!-- JS externo -->
-    <script src="../../static/JS/diplomados.js"></script>
+    <script src="../../static/JS/estudiante/diplomados.js"></script>
 </body>
 </html>
