--- a/templates/instructor/subirContenido.html
+++ b/templates/instructor/subirContenido.html
@@ -25,7 +25,7 @@
       </div>
 
       <nav>
-        <a href="{{ url_for('instructor') }}" class="nav-item " id="Inicio">
+        <a href="{{ url_for('panel') }}" class="nav-item " id="Inicio">
           <i class="fas fa-chart-line icon"></i>
           <span class="text">Panel</span>
         </a>
@@ -33,7 +33,7 @@
           <i class="fas fa-book icon"></i>
           <span class="text">Mis Diplomados</span>
         </a>
-        <a href="{{ url_for('diplomadosIns') }}" class="nav-item" id="estudiantes">
+        <a href="{{ url_for('seguimientoEstudiantes') }}" class="nav-item" id="estudiantes">
           <i class="fas fa-users icon"></i>
           <span class="text">Estudiantes</span>
         </a>
@@ -42,7 +42,7 @@
           <span class="text">Contenido</span>
         </a>
      
-        <a href="{{ url_for('diplomadosIns') }}" class="nav-item" id="reportes">
+        <a href="{{ url_for('reportes') }}" class="nav-item" id="reportes">
           <i class="fas fa-chart-bar icon"></i>
           <span class="text">Reportes</span>
         </a>
@@ -57,21 +57,8 @@
     <!-- ========== MAIN CONTENT ========== -->
     <main class="main">
       <!-- Topbar -->
-      <div class="topbar">
-        <button id="toggleSidebarMobile" class="toggle-btn">☰</button>
-        <div class="search-container">
-          <i class="fas fa-search search-icon"></i>
-          <input type="text" placeholder="Buscar diplomados, módulos..."/>
-        </div>
-        <div class="topbar-right">
-          <div class="notification-icon">
-            <i class="fas fa-bell"></i><span class="notification-badge">3</span>
-          </div>
-          <div class="profile-pic" id="profile">
-            <img src="../static/img/profile.jpg" alt="Profile"/>
-          </div>
-        </div>
-      </div>
+     <br><br/>
+
 
       <!-- Contenido principal -->
       <div class="container">
